# moovesdk

./: .gitignore  README.md  biome.json  moove.code-workspace  package.json  pnpm-lock.yaml
.husky/: pre-commit
python/: README.md  pyproject.toml
python/examples/: README.md
python/examples/langchain/web3/: README.md  example.py  pyproject.toml
python/src/adapters/langchain/: README.md  pyproject.toml
python/src/adapters/langchain/moove_adapters/langchain/: adapter.py
python/src/bookbag-sdk/: pyproject.toml
python/src/moove-sdk/: README.md  pyproject.toml
python/src/moove-sdk/moove/classes/: plugin_base.py  wallet_client_base.py
python/src/moove-sdk/moove/decorators/: tool.py
python/src/plugins/coingecko/: README.md  pyproject.toml
python/src/plugins/coingecko/moove_plugins/coingecko/: __init__.py  service.py
python/src/plugins/erc20/: README.md  pyproject.toml
python/src/plugins/erc20/moove_plugins/erc20/: __init__.py  service.py
python/src/wallets/evm/: README.md  pyproject.toml
python/src/wallets/evm/moove_wallets/evm/: evm_wallet_client.py  send_eth.py
python/src/wallets/web3/: README.md  pyproject.toml
python/src/wallets/web3/moove_wallets/web3/: wallet.py
