[tool.poetry]
name = "moove-sdk-plugin-coingecko"
version = "0.1.1"
description = "MooveSDK is an open-source framework for connecting AI agents to any onchain app"
authors = ["Andrea Villa <andreakarimodm@gmail.com>"]
readme = "README.md"
keywords = ["moove", "sdk", "web3", "agents", "ai"]
homepage = "https://github.com/mondaywe/moovesdk"
repository = "https://github.com/mondaywe/moovesdk"
packages = [
    { include = "moove_plugins/coingecko" },
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.6"
moove-sdk = "^0.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mondaywe/moovesdk/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
moove-sdk = { path = "../../moove-sdk", develop = true }

[tool.ruff]
line-length = 120
target-version = "py312"
